# TODO: Implement this Consumer
# class StreamConsumer(InstructionObserverConsumer):

#     def consume_instruction_normal(self, inst: Instruction) -> None:
#         processed_inst = self._process_instruction(inst)
#         if processed_inst:
#             # Evaluate the instruction in the streaming regex engine
#             # TODO: implement this
#             # regex_engine.process(processed_inst)
#             # if regex_engine.matched:
#             #     self._matched_observer.regex_matched(processed_inst.addrs)
#             pass
